Fixed rotation tablet sensor on Windows

Wintab returns bogus resolution for rotation so just use
standard values instead

BUG:331358